[gd_scene load_steps=3 format=3 uid="uid://b5csifcrytegw"]

[ext_resource type="Script" path="res://gui/pause_menu/pause_menu.gd" id="1_nd3lc"]
[ext_resource type="PackedScene" uid="uid://xmhpn38awq6d" path="res://gui/menu_button.tscn" id="2_tktbs"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nd3lc")

[node name="animator" type="AnimationPlayer" parent="."]

[node name="background_blur" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="menu_buttons" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
alignment = 1

[node name="resume_button" parent="margin_container/menu_buttons" instance=ExtResource("2_tktbs")]
layout_mode = 2
text = "Resume"

[node name="settings_button" parent="margin_container/menu_buttons" instance=ExtResource("2_tktbs")]
layout_mode = 2
text = "Settings"

[node name="quit_button" parent="margin_container/menu_buttons" instance=ExtResource("2_tktbs")]
layout_mode = 2
text = "Quit"

[node name="quit_warning" type="VBoxContainer" parent="margin_container"]
visible = false
layout_mode = 2
theme_override_constants/separation = 64

[node name="quit_warning" type="RichTextLabel" parent="margin_container/quit_warning"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center]Are you sure you want to quit?[/center]"

[node name="center_container" type="CenterContainer" parent="margin_container/quit_warning"]
layout_mode = 2
size_flags_horizontal = 3

[node name="quit_buttons" type="HBoxContainer" parent="margin_container/quit_warning/center_container"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="quit_confirm" parent="margin_container/quit_warning/center_container/quit_buttons" instance=ExtResource("2_tktbs")]
layout_mode = 2
text = "Yes"

[node name="quit_cancel" parent="margin_container/quit_warning/center_container/quit_buttons" instance=ExtResource("2_tktbs")]
layout_mode = 2
text = "No"

[connection signal="pressed" from="margin_container/menu_buttons/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="margin_container/menu_buttons/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="margin_container/quit_warning/center_container/quit_buttons/quit_confirm" to="." method="_on_quit_confirm_pressed"]
[connection signal="pressed" from="margin_container/quit_warning/center_container/quit_buttons/quit_cancel" to="." method="_on_quit_cancel_pressed"]
